// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Stars|CTA primary 1`] = `
.c1 {
  color: #FFFFFF;
  font-family: 'Raleway',sans-serif;
  font-weight: 800;
  font-size: 16px;
  line-height: 1;
  margin: 0 0 32px;
  background-color: #1C104E;
  display: inline-block;
  padding: 16px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  padding: 36px;
  width: -webkit-fill-available;
  min-height: -webkit-fill-available;
  background-color: #FFFFFF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
  color="white"
>
  <button
    className="c1"
    onClick={null}
    type="primary"
    url={null}
  >
    Primary
  </button>
</div>
`;

exports[`Storyshots Stars|CTA secondary 1`] = `
.c1 {
  color: #1C104E;
  font-family: 'Raleway',sans-serif;
  font-weight: 800;
  font-size: 16px;
  line-height: 1;
  margin: 0 0 32px;
  background-color: #FFFFFF;
  display: inline-block;
  padding: 16px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 {
  padding: 36px;
  width: -webkit-fill-available;
  min-height: -webkit-fill-available;
  background-color: #303133;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

<div
  className="c0"
  color="black"
>
  <button
    className="c1"
    onClick={null}
    type="secondary"
    url={null}
  >
    Secondary
  </button>
</div>
`;
